# llm-zoomcamp-2026

./: notebook.ipynb  pyproject.toml  rag_assistant.ipynb  rag_helper.py  rag_ingest.ipynb
Week 1/: README.md
Week_1/: agentic_assistant.ipynb  homework.ipynb  pyproject.toml  rag_assistant.ipynb
Week_2/: .gitignore  rag_helper.py
llm-zoomcamp-hw2/: homework.ipynb
week_1/: ingest.py
week_2/: pyproject.toml  vector_search.ipynb  vector_search_persistent.ipynb
week_2/llm-zoomcamp-hw2/: .gitignore  pyproject.toml
week_4/: 01-data-gen.ipynb  02-search-eval.ipynb  pyproject.toml
week_4/data/: ground_truth-new.csv
